[package]
name = "netstack-smoltcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std", "max_level_debug", "release_max_level_off"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "rt-multi-thread", "io-util"] }
tokio-util = "0.7.10"
etherparse ="0.13"
futures = "0.3"
rand = "0.8"
spin = "0.9"
smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
] }
tracing-subscriber = "0.3.18"
socket2 = "0.5.6"

[features]
default = []
offload = []

[dev-dependencies]
tun = { version = "0.6", features = ["async"] }
netstack-lwip = { git = "https://github.com/Watfaq/netstack-lwip.git", rev = "2817bf82740e04bbee6b7bf1165f55657a6ed163" }
structopt = "0.3"
shadowsocks = "1.18"