[package]
name = "netstack-smoltcp"
version = "0.1.1"
edition = "2021"
authors = ["cavivie <cavivie@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/automesh-network/netstack-smoltcp"
homepage = "https://github.com/automesh-network/netstack-smoltcp"
documentation = "https://docs.rs/netstack-smoltcp"
keywords = ["netstack", "smoltcp", "network", "ip", "udp", "tcp", "tun"]
description = """
A netstack for the special purpose of turning packets from/to a TUN interface
into TCP streams and UDP packets. It uses smoltcp-rs as the backend netstack.
"""

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7.10"
etherparse = "0.13"
futures = "0.3"
rand = "0.8"
spin = "0.9"
smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
] }

[dev-dependencies]
tun = { package = "tun2", version = "1.0", features = ["async"] }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "io-util",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"
structopt = "0.3"
socket2 = "0.5.6"
socket2-ext = { version = "0.1" }
